# tpu-research

./: .gitignore  README.md  gla.md  main.py  pyproject.toml  test_any_memory_access.py  test_reshape_1d.py  test_scalar_types.py  test_scalar_vmem.py  test_smem_store_mask.py  test_unsigned_reduction.py
docs/superpowers/specs/: 2026-06-25-jax-src-analysis-design.md
examples/: matmul_bfloat16.py  pmap_allreduce.py  sharding_example.py
jax-src/: 00-jax-architecture.ipynb
src/: utils.py
src/jax/: probe_vmem.py
src/jax/layers/: attention_kda.py  attention_kda_maxtext.py  gla.py
src/jax/modules/: convolution.py  fused_norm_gate.py  layernorm.py
src/jax/ops/: gla.py  kda_varlen.py  pallas_gla.py  pallas_gla_chunk.py  utils.py
src/torch/layers/: gla.py  utils.py
src/torch/modules/: convolution.py  fused_norm_gate.py  layernorm.py
src/vmem_probe/: probe_vmem.py
tests/: __init__.py  check_fused_recurrent_fwd.py  check_gla_fwd_o_gk.py  check_gla_layer.py  compare_kda_precision.py  compare_kda_precision_full.py  compare_kda_precision_varlen.py  test.py  test_compilation.py  test_hardware.py  test_kda_jax.py  test_optimizations.py  test_pallas_manual.py  test_pallas_manual_varlen.py  test_parallelism.py  test_torch_gla.py  utils.py
tests/ops/: test_fused_recurrent_gla_fwd.py
tests/tpu_limit/: pallas_call-shape-limit.py  test_gather_limit.py  test_probe_vmem.py  test_sc_gather_limit.py
tpu_features/: __init__.py  compilation.py  hardware.py  optimizations.py  parallelism.py
tpu_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1 files in other folders)
