[project]
name = "tpu-research"
version = "0.1.0"
authors = [
  { name = "0xaskr", email = "mail@askr.dev" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxlib",
    "flax",
    "optax",
    "numpy",
    "matplotlib>=3.10.8",
    "transformers",
    "einops",
    "flash-linear-attention",
]

[project.optional-dependencies]
tpu = [
    "jax[tpu]; sys_platform == 'linux'",
    "libtpu; sys_platform == 'linux'",
]
gpu = [
    "torch",
    "triton>=3.2.0",
    "jax[cpu]",
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/libtpu_releases.html"]

[tool.uv.sources]
flash-linear-attention = { git = "https://github.com/fla-org/flash-linear-attention" }

[tool.ruff]
# 设置每行最大长度（可选）
line-length = 88

[tool.ruff.format]
# 使用空格缩进
indent-style = "space"
# 设置缩进宽度为 2
indent-width = 2
